change logic to work with url to images